# easy-rpc

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  TODOs  hello.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: bindings_browser-api_build_publish.yml  bindings_node-api_build_publish.yml  build.yml  coverage.yml  release.yml  test.yml  transpiler_build.yml  transpiler_coverage.yml  transpiler_test.yml
backend/: Cargo.toml
backend/src/: lib.rs  server.rs  target.rs
backend/src/protocol/: mod.rs  socket.rs
backend/src/tests/: server.rs
bindings/browser/: Cargo.toml  ci.js
bindings/browser-api/: Cargo.toml  LICENSE_MIT  ci.js
bindings/browser-api/src/: lib.rs  target.rs
bindings/browser/src/: lib.rs  server.rs  target.rs
bindings/node-api/: Cargo.toml  ci.js  index.d.ts  index.js  package-lock.json  package.json
bindings/node-api/.cargo/: config.toml
bindings/node-api/__test__/: index.spec.mjs
bindings/node-api/npm/android-arm64/: README.md  package.json
bindings/node-api/npm/darwin-arm64/: README.md  package.json
bindings/node-api/npm/darwin-x64/: README.md  package.json
bindings/node-api/npm/freebsd-x64/: README.md  package.json
bindings/node-api/npm/linux-arm-gnueabihf/: README.md  package.json
bindings/node-api/npm/linux-arm64-gnu/: README.md  package.json
bindings/node-api/npm/linux-arm64-musl/: README.md  package.json
bindings/node-api/npm/linux-x64-gnu/: README.md  package.json
bindings/node-api/npm/linux-x64-musl/: README.md  package.json
bindings/node-api/npm/win32-arm64-msvc/: README.md  package.json
bindings/node-api/npm/win32-ia32-msvc/: README.md  package.json
bindings/node-api/npm/win32-x64-msvc/: README.md  package.json
bindings/node-api/src/: lib.rs  server.rs  target.rs  threadsafe_function.rs
erpc/: Cargo.toml
erpc/src/: lib.rs  target.rs
erpc/src/protocol/: error.rs  http.rs  mod.rs  routes.rs  socket.rs
erpc/src/server/: handler.rs  mod.rs
http-client-wasm/: Cargo.toml
http-client-wasm/src/: lib.rs  server.rs  target.rs
http-client-wasm/src/tests/: mod.rs
http-server/: Cargo.toml
http-server/src/: blah.rs  lib.rs  server.rs  target.rs
http-server/src/tests/: server.rs
integration-test-project/: README.md  package-lock.json  package.json
integration-test-project/backend/: erpc.json  package-lock.json  package.json
integration-test-project/backend/src/: main.ts
integration-test-project/frontend/: erpc.json  package-lock.json  package.json  vite.config.ts
integration-test-project/frontend/src/: main.ts
integration-test-project/sources/: api.erpc  roles.json
src/: README.md  error.rs  main.rs
src/language_server/: initialize.rs  initialized.rs  jsonrpc.rs  mod.rs  show_message.rs  shutdown.rs
src/language_server/jsonrpc/: mod.rs
src/tests/: mod.rs  normal_mode.rs  watch_mode.rs
src/tests/assert/backend/: main.ts  package.json
src/tests/assert/frontend/: package-lock.json
src/tests/assert/frontend/src/: main.ts
src/tests/example_setup/backend/: package-lock.json
src/tests/example_setup/frontend/: package.json
src/tests/example_setup/sources/: api.erpc
src/transpiler/: README.md  config.rs  mod.rs
src/transpiler/generator/: README.md  mod.rs
src/transpiler/generator/tests/: class_generation.rs  endpoints_to_classes.rs  mod.rs  recursive_class_generation.rs
src/transpiler/generator/translator/: mod.rs
src/transpiler/generator/translator/typescript/: class.rs  client.rs  endpoint.rs  mod.rs
src/transpiler/generator/typescript/: class.rs  client.rs  endpoint.rs  mod.rs
src/transpiler/generator/typescript/tests/: class.rs  client.rs  endpoint.rs  interface.rs  mod.rs
src/transpiler/parser/: README.md  mod.rs
src/transpiler/parser/generator/: mod.rs
src/transpiler/parser/generator/tests/: endpoints_to_classes.rs  mod.rs
src/transpiler/parser/generator/typescript/: class.rs  endpoint.rs  interface.rs  mod.rs
src/transpiler/parser/input_reader/: mod.rs  tests.rs
src/transpiler/parser/input_reader/tests/: code_position.rs  consume_to_delimeter.rs  done.rs  peek_consume.rs  peek_until.rs
src/transpiler/parser/lexer/: disposeable_comment.rs  documentational_comment.rs  identifier.rs  invalid_characters.rs  keyword.rs  line_break.rs  literal.rs  mod.rs  operator.rs  space.rs  token.rs
src/transpiler/parser/lexer/tests/: disposeable_comment.rs  documentational_comment.rs  identifier.rs  invalid_characters.rs  keyword.rs  line_break.rs  literal.rs  mod.rs  operator.rs  reader.rs  space.rs
src/transpiler/parser/parser/: custom_type.rs  disposeable_comment.rs  endpoint.rs  erpc_type.rs  field_type.rs  line_break.rs  mod.rs
src/transpiler/parser/parser/tests/: custom_type.rs  disposeable_comment.rs  endpoint.rs  middleware.rs  mod.rs  parse.rs
src/transpiler/tests/: config.rs  mod.rs  run.rs
src/transpiler/validator/: mod.rs
src/transpiler/validator/tests/: endpoints.rs  mod.rs  types.rs
src/util/: assert_equal_directories.rs  cast.rs  copy_dir.rs  mod.rs  normalize_path.rs  unwrap_oneshot.rs
transpiler/: .gitignore  Cargo.toml  README.md
transpiler/src/: error.rs  main.rs
transpiler/src/language_server/: mod.rs
transpiler/src/tests/: watch_mode.rs
transpiler/src/tests/assert/backend/: erpc.json
transpiler/src/tests/example_setup/frontend/: erpc.json
transpiler/src/tests/example_setup/sources/: roles.json
transpiler/src/transpiler/: README.md  config.rs
transpiler/src/transpiler/generator/: mod.rs
transpiler/src/transpiler/generator/translator/: mod.rs
transpiler/src/transpiler/parser/: README.md  mod.rs
transpiler/src/transpiler/parser/input_reader/: mod.rs
transpiler/src/transpiler/parser/lexer/: documentational_comment.rs  identifier.rs  invalid_characters.rs  literal.rs  token.rs
transpiler/src/transpiler/parser/parser/: endpoint.rs  erpc_type.rs  middlware.rs
transpiler/src/transpiler/tests/: config.rs
transpiler/src/transpiler/validator/: mod.rs
transpiler/src/util/: README.md  assert_equal_directories.rs  cast.rs  mod.rs  result_option_unwrapper.rs
(+61 files in other folders)
