[package]
name = "easy-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
strum = "0.24"
strum_macros = "0.24"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
notify = "5.0.0"
tokio = { version = "1.20.1", features = ["full"] }
nanoid = "0.4.0"
futures = "0.3"