[package]
name = "easy-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4"
strum = "0.24"
strum_macros = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "5"
tokio = { version = "1.20", features = ["full"] }
nanoid = "0.4"
futures = "0.3"
tower-lsp = "0.17"
async-channel = "1.7"