[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10"
futures-util = "0.3"
reqwest = { version = "0.11", default_features = false, features = [ "rustls-tls" ] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_json = "1.0"
erased-serde = "0.3"
nanoid = "0.4.0"

# https://github.com/briansmith/ring/issues/1514#issuecomment-1258562375
[patch.crates-io]
ring = { git = "https://github.com/awakecoding/ring", branch = "0.16.20_alpha" }