[package]
name = "http-client-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erpc = { path = "../erpc" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5"
web-sys = { version = "0.3", features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]}
wasm-bindgen = { version = "0.2"}
wasm-bindgen-futures = "0.4"
flume = "0.10"
lazy_static = "1.4"
