[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10"
futures-util = "0.3"
futures = "0.3"
reqwest = { version = "0.11", default_features = false, features = [ "rustls-tls" ] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
nanoid = "0.4.0"
erpc = { path = "../erpc" }
log = "0.4"
lazy_static = "1.4"
parking_lot = { version = "0.12", features = [ "hardware-lock-elision" ] }
hyper = { version = "1.0.0-rc.3", features = ["full"] }
http-body-util = "0.1.0-rc.2" 
tokio-tungstenite = "0.18"
tower-http = {version = "0.4", features = ["full"] }
tower = "0.4"