[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10"
futures-util = "0.3"
futures = "0.3"
reqwest = { version = "0.11", default_features = false, features = [ "rustls-tls" ] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
nanoid = "0.4"
erpc = { path = "../erpc" }
log = "0.4"
lazy_static = "1.4"
parking_lot = { version = "0.12", features = [ "hardware-lock-elision" ] }
salvo = { version = "0.50", features = ["quinn", "affix", "cors", "websocket"] }
