[package]
name = "browser"
version = "0.1.0"
authors = ["m1212e <->"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.87"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

http-client-wasm = { path = "../../http-client-wasm" }
serde-wasm-bindgen = "0.5"
js-sys = "0.3"
erpc = { path = "../../erpc" }
wasm-bindgen-futures = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
console_log = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
