[package]
name = "node-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.6", features = ["full"] }
napi-derive = "2.12"
serde = { version = "1.0" }
serde_json = "1.0"
log = "0.4"
simple_logger = "4.1"
tokio = { version = "1", features = ["full"] }
http-server = { path = "../../http-server" }
erpc = { path = "../../erpc" }
lazy_static = "1.4"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
